--- a/DemoBootGit/manifest.yml
+++ b/DemoBootGit/manifest.yml
@@ -1,6 +1,6 @@
 ---
 applications:
-- name: gitDemo
+- name: gitTest
   path: target/DemoBootGit-0.0.1-SNAPSHOT.war
   random-route: true
   memory: 1024M
