Changes on Db properties

--- a/DemoBootGit/src/main/resources/application.properties
+++ b/DemoBootGit/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://john.db.elephantsql.com:5432/xmreoqlo
-spring.datasource.username=xmreoqlo
-spring.datasource.password=VG6-jDYTX0sl5cA_NacNzGEdqmLXTNy9
+spring.datasource.url=jdbc:postgresql://satao.db.elephantsql.com:5432/zwddsgeq
+spring.datasource.username=zwddsgeq
+spring.datasource.password=N0vl-6X_M1LuiiJnLnSdAcYHTnP4d0Ay
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.show-sql=true
