--- a/DemoBootGit/src/main/resources/application.properties
+++ b/DemoBootGit/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
+server.port=8091
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://satao.db.elephantsql.com:5432/zwddsgeq
-spring.datasource.username=zwddsgeq
-spring.datasource.password=N0vl-6X_M1LuiiJnLnSdAcYHTnP4d0Ay
+spring.datasource.url=jdbc:postgresql://john.db.elephantsql.com:5432/ookjrcgf
+spring.datasource.username=ookjrcgf
+spring.datasource.password=CEr8T39amktnRwU2Y3p199FvkMv8uMDX
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.show-sql=true
